# madi

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml  sonarcloud.yml  sphinx.yml
bootloader/nrf5-usb-dfu/: Makefile  bootloader.hex  main.c  nrfx_config.h  pca10059.ld  usb_descriptors.c
common/: wifi.c
docs/boards/: README.md  at32.md  esp32.md  nrf52.md  stm32.md
docs/doxygen/: Doxyfile
docs/getting-started/: esp32.md  nrf52.md
docs/sphinx/: conf.py  index.rst  readme.rst
docs/sphinx/api/: index.rst  network.rst  pmu.rst  watchdog.rst  (+1 more)
drivers/ble/: common.c  esp32.c
drivers/pmu/: bq25180.c
drivers/wifi/: esp32.c  zephyr.c
include/: battery.h  evtloop.h  i2c0.h  ledind.h  lwipopts.h  metrics.def  mxic_nor_qspi.h  net.h  selftest.h  status_led.h  user_button.h  userbutton.h  watchdog.h
include/common/: wifi.h  wifi_private.h
include/net/: ble.h  ble_interface.h  transport.h  transport_interface.h  util.h  wifi.h  wifi_interface.h
include/padc/: adc.h  adc_interface.h
include/pi2c/: i2c.h  i2c_interface.h
include/pnet/: iface_usb.h  net.h
include/pqspi/: qspi.h
include/puart/: uart.h  uart_interface.h
include/pusb/: usbd.h  usbd_cdc.h
ports/coreMQTT/: mqtt.c
ports/esp-idf/: adc.c  adc1.c  adc1.h  adc1_legacy.c  adc_legacy.c  battery.c  battery_monitor.c  board.c  cli.c  esp32.cmake  gpio0.c  gpio35.c  i2c.c  i2c0.c  i2c0.h  partitions.csv  pm.c  sdkconfig.defaults  start.c  status_led.c  syscall.c  system.c  tls.c  uart.c  uart0.c  uart0.h  usb_serial_jtag.c  usb_serial_jtag.h  user_button.c  watchdog.c
ports/esp32/: watchdog.c
ports/host/: host.mk
ports/lwip/: CMakeLists.txt  fs_custom.c  fsdata_custom.c  lwipopts.h  sources.mk  sys.c
ports/mbedtls/: CMakeLists.txt  config.h
ports/native/: board.c  native.mk
ports/nrf5-sdk/: CMakeLists.txt  FreeRTOSConfig.h  adc.c  battery_monitor.c  board.c  cli.c  gpio20.c  i2c.c  i2c0.c  i2c0.h  nrf52832.ld  qspi.c  sdk.mk  sdk_config.h  uart.c  uart0.c  uart0.h
ports/nrf52/: libmcu.h  redbear.h
ports/stm32/: stm32f1.mk  timext.c  watchdog.c
ports/tinyusb/: CMakeLists.txt  descriptors.c  netif_usb.c  netif_usb_esp32.c  sources.mk  tusb_config.h  usbd.c  usbd_cdc_acm.c  usbd_cdc_net.c  usbd_esp32.c  usbd_nrf5x.c  usbd_stm32g4.c
ports/zephyr/: cli.c  fpl.conf  i2c0.h  watchdog.c  zephyr.cmake
projects/: app.cmake  app.mk  arm-none-eabi-gcc.cmake  defines.mk  external.cmake  rules.mk  sources.cmake  sources.mk  toolchain.mk  version.cmake  version.mk
projects/arch/: cm3.cmake  cm3.mk  cm4f.cmake  cm4f.mk  common.cmake  common.mk
projects/boards/: blackpill_at32f403a.cmake  blackpill_at32f403a.mk  esp32.mk  esp32s3.mk  host.mk  madi_nrf52.cmake  madi_nrf52.mk  madi_stm32.cmake  madi_stm32.mk  native.mk  nrf52.mk  nrf52_blenano2.cmake  nrf52_blenano2.mk  nrf52_libmcu.cmake  nrf52_libmcu.mk  stm32_libmcu.cmake  stm32_libmcu.mk  stm32_min_dev_blue.cmake  stm32_min_dev_blue.mk  stm32f1.mk
projects/devices/: esp32.mk  nrf52.mk  stm32f1.mk
src/: battery.c  bq25180.c  evtloop.c  ledind.c  main.c  mxic_nor_qspi.c  selftest.c  user_button.c  userbutton.c
src/cli/: cli.h  cli_commands.c  cli_commands.h  cmd_ble.c  cmd_debug.c  cmd_help.c  cmd_info.c  cmd_memdump.c  cmd_metrics.c  cmd_mqtt.c  cmd_test.c  cmd_wifi.c
src/net/: httpsrv.c  httpsrv.h  net.c  netif_usb.c  netif_usb.h
stubs/: mqtt.c  semaphore.c  transport.c  wifi.c
tests/: Makefile  runner.mk
(+122 files in other folders)
